# arpack

./: .gitignore  LICENSE  arpack.cabal  arpack.nix  default.nix  shell.nix
src/: Exceptions.hs  Internal.hs  Options.hs
src/Arpack/: Exceptions.hs  Foreign.hs  Lock.hs  Options.hs  State.hs
src/Arpack/Foreign/: Class.hs  Complex.hs  Real.hs
src/Numeric/: Arpack.hs
src/Numeric/LinearAlgebra/: Arnoldi.hs
src/Numeric/LinearAlgebra/Arnoldi/: Lock.hs  State.hs
test/: Properties.hs  Tests.hs
tests/: tests.hs
