name:                arpack
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
-- copyright:
category:            Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Numeric.LinearAlgebra.Arnoldi
  other-modules:
    Exceptions,
    Internal,
    Options
  build-depends:
    base >= 4.6,
    concurrent-extra >= 0.7,
    containers >= 0.5,
    control-monad-loop >= 0.1,
    data-default >= 0.5,
    ieee754 >= 0.7,
    storable-complex >= 0.2,
    transformers >= 0.3,
    vector >= 0.10,
    vector-algorithms >= 0.6
  hs-source-dirs: src
  default-language: Haskell2010
  pkgconfig-depends: arpack

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test
  other-modules:
    Properties
  build-depends:
    arpack,
    base,
    hmatrix >= 0.16,
    ieee754,
    tasty >= 0.7,
    tasty-quickcheck >= 0.3,
    vector
  default-language: Haskell2010